alpm-types/src/version/snapshots/pkg_full::parse_error_in_full_version_from_string@case_01_two_pkgrel.snap
---
source: alpm-types/src/version/pkg_full.rs
---
error: invalid full alpm-package-version
 | 
 | 1:foo-1-1
 |        ^ expected the package version to end with a valid package release
